Fix jumping section

--- a/app/components/Buttons/Buttons.less
+++ b/app/components/Buttons/Buttons.less
@@ -28,7 +28,7 @@
 }
 
 .section {
-  flex-grow: 1;
+  flex: 1;
 
   &:not(:last-child) {
     margin-right: @grid-gutter-width * 3;
